umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_sbh4+.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "{Sb+v4}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: "D{?"
    atoms:
      - "{Sb+v4}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
